# Cuda-Barretenberg

./: .gitignore  CMakeLists.txt  bootstrap.sh  format.sh  notes.md  problems.md  resources.md  tasks.md
barretenberg/: bootstrap.sh
barretenberg/src/aztec/plonk/composer/: plookup_composer.hpp
cmake/: build.cmake
src/aztec/: CMakeLists.txt  sample.h
src/aztec/benchmark/: CMakeLists.txt
src/aztec/benchmark/decrypt_bench/: CMakeLists.txt  main.cpp  main.cu
src/aztec/benchmark/plonk_bench/: CMakeLists.txt  plonk.bench.cpp  turbo_plonk.bench.cpp  ultra_plonk.bench.cpp  vanilla_plonk.bench.cpp
src/aztec/cuda-fixnum/: CMakeLists.txt  Makefile  fixnum.cu  main.cu  primitives.cu  sample.cpp  sample.h  sample_test.cpp  sample_test.h
src/aztec/cuda-fixnum/bench/: bench.cu
src/aztec/ecc/curves/bn254/: fq.hpp  fq.test.cpp  fq12.test.cpp  fq2.test.cpp  fq6.test.cpp  fr.hpp  fr.test.cpp  g1.test.cpp  g2.test.cpp  pairing.test.cpp
src/aztec/ecc/curves/bn254/scalar_multiplication/: scalar_multiplication.test.cpp
src/aztec/ecc/curves/grumpkin/: grumpkin.hpp  grumpkin.test.cpp
src/aztec/ecc/curves/secp256k1/: secp256k1.test.cpp
src/aztec/ecc/curves/secp256r1/: secp256r1.test.cpp
src/aztec/ecc/fields/: field.hpp  field_impl.hpp
src/aztec/ecc/groups/: affine_element.test.cpp  element_impl.hpp  wnaf.test.cpp
src/aztec/gpu/: CMakeLists.txt
src/aztec/gpu/arithmetic/: CMakeLists.txt  fixnum.cu  primitives.cu
src/aztec/gpu/bench/: CMakeLists.txt  field_bench.cu  group_bench.cu  mont_mult.cpp  mont_mult.cu  mont_mult.h  montgomery.cu
src/aztec/gpu/benchmark/: CMakeLists.txt  arithmetic.cu
src/aztec/gpu/benchmark/bench/: CMakeLists.txt  arithmetic.cu  montgomery.cpp
src/aztec/gpu/benchmark/common/: montgomery.cpp  montgomery.h
src/aztec/gpu/benchmark/tests/: curve_bn254_test.cu  curve_test.cu  field_fr_test.cu  field_test.cu  group_test.cu
src/aztec/gpu/benchmark/tests/curves/: curve_jacobian_test.cu  curve_projective_test.cu
src/aztec/gpu/benchmark/tests/fields/: field_fq_test.cu  field_fr_test.cu
src/aztec/gpu/benchmark/tests/msm/: example_test.cu  msm_test.cu  msm_test_cpu.cpp  msm_test_gpu.cu  points.txt  sum_reduction_test.cu
src/aztec/gpu/benchmark/tests/msm/points/: curve_points.txt
src/aztec/gpu/bignum/: fixnum.cu
src/aztec/gpu/curves/: CMakeLists.txt  element.cu  element.cuh  group.cu  group.cuh
src/aztec/gpu/fields/: CMakeLists.txt  element.cu  element.cuh  field.cu  field.cuh  fixnum.cuh  fq.cuh  fq_test.test.cu  group.cu  group.cuh  random.cuh
src/aztec/gpu/groups/: CMakeLists.txt  element.cuh  group.cuh
src/aztec/gpu/headers/: affine.cuh  curve_config.cuh  params.cuh  projective.h
src/aztec/gpu/msm/: CMakeLists.txt  common.cu  common.cuh  error.cuh  init_pippenger.cu  init_pippenger.cuh  kernel.cu  main.cu  pippenger.cu  pippenger.cuh
src/aztec/gpu/msm/points/: points.txt  scalars.txt  scalars_copy.txt
src/aztec/gpu/msm/util/: thread_pool.hpp
src/aztec/gpu/notes/: notes.md  problems.md  resources.md  tasks.md
src/aztec/gpu/ntt/: CMakeLists.txt  kernel.cu  main.cu  ntt.cu  ntt.cuh
src/aztec/gpu/plonk/: CMakeLists.txt  composer_wrapper.cu  composer_wrapper.cuh  kzg_wrapper.cu  kzg_wrapper.cuh  plonk.cu  prover_wrapper.cu  prover_wrapper.cuh  queue_wrapper.cu  queue_wrapper.cuh
src/aztec/gpu/reference_string/: CMakeLists.txt  io.cu  main.cu  reference_string.cu  reference_string_methods.cu
src/aztec/gpu/srs/: CMakeLists.txt  io.cu  reference_string.cu  reference_string_methods.cu  reference_string_methods.cuh
src/aztec/gpu/tests/: CMakeLists.txt  montgomery.cpp
src/aztec/gpu/tests/curves/: curve_jacobian_test.cu  curve_projective_test.cu
src/aztec/gpu/tests/msm/: msm_test_cpu.cpp  msm_test_gpu.cu  sum_reduction_test.cu
src/aztec/gpu/utils/: mont.cuh  sharedmem.cuh
src/aztec/multiexp/: arith.cu  reduce.cu
src/aztec/plonk/composer/: standard_composer.cpp  standard_composer.hpp
src/aztec/plonk/proof_system/commitment_scheme/: commitment_scheme.hpp  commitment_scheme.test.cpp  kate_commitment_scheme.cpp  kate_commitment_scheme.hpp
src/aztec/plonk/proof_system/prover/: c_bind.cpp  c_bind_unrolled.cpp  prover.cpp  prover.hpp  prover.test.cpp  work_queue.hpp
src/aztec/plonk/proof_system/widgets/random_widgets/: permutation_widget.hpp  permutation_widget_impl.hpp  plookup_widget.hpp  plookup_widget_impl.hpp  random_widget.hpp
